@@ -1,5 +1,9 @@
 2004-12-28  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
+	* image/image_jpeg.c: fix compilation with IBM's xlc.
+
+	* Makefile.am: remove useless GNUish construct.
+
 	* lib/listdir.c: add a better definition of S_ISSOCK, that works
 	with SCO OpenServer (thanks to Paul McNary).
 
